<resources>
    <string name="APP_reco_none">אנא התקן את אפליקציית מדא תחילה!</string>
    <string name="APP_reco_off">איתור הודעות כבוי.</string>
    <string name="Acti">הנעת גפיים</string>
    <string name="Apgar">ציון אפגאר הוא: %d</string>
    <string name="ApgarInfo">יילוד בציון נמוך מ4 זקוק להחייאה מיידית.\nניקוד בין 4 ל6 מסמן על יילוד במצוקה בינונית הזקוק לחמצון והמרצה.\nניקוד גבוה מ6 הינו אינדיקציה ליילוד תקין.</string>
    <string name="Appe">הופעה/צבע</string>
    <string name="BGServiceTicker">מזהה הודעות חדשות ממד\"א</string>
    <string name="BGServiceTtl">מאזין ברקע להודעות</string>
    <string name="BGServiceTxt">מזהה הודעות חדשות שנשלחות ממוקד מד\"א ברקע</string>
    <string name="CONANTest">אירוע חדש. 14:18 מונה:267 כתובת: בדיקה!!!ירושלים המ\"ג, קוד הזנקה: מחלה מבוגר, קוד רפואי: דום לב</string>
    <string name="CONAN_reco_off">איתור הודעות כונן כבוי בהגדרות.</string>
    <string name="ContracBetween">הפרש מציר קודם: %s</string>
    <string name="ContracDelete">מחק צירים שמורים?</string>
    <string name="ContracDeleteEmpty">אין צירים למחוק</string>
    <string name="ContracLength">אורך הציר: %s</string>
    <string name="ContracMinutes">%1$d דקות ו%2$d שניות</string>
    <string name="ContracRecover">שחזר נתונים קודמים?</string>
    <string name="ContracSecondes">%d שניות</string>
    <string name="Fna">שם פרטי</string>
    <string name="Glasgow">ציון גלאזגו הוא: %s</string>
    <string name="GlasgowHigh">תרדמת חמורה</string>
    <string name="GlasgowInfo">ציון נמוך מ9 מוגדר כתרדמת חמורה.\nציון בין 9 ל12 מוגדר כתרדמת בינונית.\nציון גבוה מ12 מוגדר כתרדמת מינורית.</string>
    <string name="GlasgowLow">תרדמת מינורית</string>
    <string name="GlasgowMed">תרדמת בינונית</string>
    <string name="Grim">העוויות</string>
    <string name="HN">חולה נפגע</string>
    <string name="HT">התחייבות</string>
    <string name="Lna">שם משפחה</string>
    <string name="MISHM_reco_off">איתור הודעות משמרת כבוי בהגדרות.</string>
    <string name="Mcode">קודים רפואיים</string>
    <string name="MetroBound">המטרונום פעיל מתוך כלי עזר, לא ניתן לעצור אותו חיצונית.</string>
    <string name="MetroServiceTtl">מטרונום פעיל ברקע</string>
    <string name="MetroServiceTxt">התראה זו מונעת כיבוי המטרונום באופן אוטומטי במטרת חיסכון בסוללה.</string>
    <string name="MetroStop">עצור</string>
    <string name="Mhac">עבור להכתבה</string>
    <string name="Minf">פרטי מקרה</string>
    <string name="Mrec">אשר קבלה</string>
    <string name="Mrec2">חזור</string>
    <string name="NoPicked">יש לסמן לכל הפחות כלי עזר אחד!</string>
    <string name="Nteam">הוספת איש צוות</string>
    <string name="Puls">דופק</string>
    <string name="Resp">נשימה</string>
    <string name="SUM">סכום</string>
    <string name="SendNoNames">לא ניתן לשלוח ללא אנשי צוות!</string>
    <string name="TEAMTest">הודעת צוות. 02:34 מונה:1325 כתובת: בדיקה!!! ירושלים בורוכוב. קוד הזנקה: מחלה מבוגר, קוד רפואי: חוסר הכרה</string>
    <string name="TestCallApp">כונן</string>
    <string name="TestCallMsg">דימוי קבלת מקרה כהודעת כונן או כהודעת משמרת?</string>
    <string name="TestCallSMS">משמרת</string>
    <string name="TversionNumber">גרסה מספר: %1$s.\nפותח על ידי צוות \"AtlowApps\". כל הזכויות על העיצוב, הרעיונות והביצוע שמורים לChemi@low ולאיתיאל אטלו.\nתודתינו מסורה ליוסי קסוטו, ליוחאי בניטה ולשלום סאקס על סיועם הרב, וכן לזוהר ממן על \"קונטרס הגישה לנפטר\".\n\nהאפליקציה פותחה על ידי מתנדבים במטרה להנגיש פעולות קיימות ובמטרה ליצור פעולות חדשות שיקלו על המתנדבים בפעילות חירום ושגרה.\n\nבכל שאלה, בקשה, בעיה או תקלה ניתן לפנות אלינו דרך עמוד יצירת קשר, ואנו נעשה כמיטב יכולתנו לתת מענה לכל הבקשות.\n\nאפליקציה זו איננה אפליקציה רשמית של מד\"א, ואיננה קשורה באופן כלשהוא למד\"א. המשתמש בה נושא באחריות המלאה בהשלכות השימוש.</string>
    <string name="aQ">מתנדב 1</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">הגדרות</string>
    <string name="add_word">הוסף מונח למילון</string>
    <string name="address">כתובת אירוע</string>
    <string name="admin">מנהל:</string>
    <string name="ambN">מספר אמבולנס</string>
    <string name="app_name">דיווחי מגן דוד אדום</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">החל</string>
    <string name="atm">לחץ אטמוספרי בבלון</string>
    <string name="atm_100">100</string>
    <string name="bQ">מתנדב 2</string>
    <string name="back">חזרה לעמוד הבית</string>
    <string name="banner_ad_unit_id">ca-app-pub-7600269766434003/5732229370</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="breathing">נשימות בדקה</string>
    <string name="button_a">הכתבת טפסים</string>
    <string name="button_ag">מחשבון אפגאר</string>
    <string name="button_b">דיווח צוות</string>
    <string name="button_c">שעון דופק</string>
    <string name="button_d">מטרונום</string>
    <string name="button_dict">מילון רפואי</string>
    <string name="button_e">מחשבון מדדים</string>
    <string name="button_f">שעון צירים</string>
    <string name="button_g">מחשבון חמצן</string>
    <string name="button_gl">מחשבון גלאזגו</string>
    <string name="button_h">כלי עזר</string>
    <string name="button_i">הודעה כללית</string>
    <string name="button_j">דיווחים למוקד</string>
    <string name="button_p">פרוטוקלים</string>
    <string name="cQ">מתנדב 3</string>
    <string name="callT">כל האירועים</string>
    <string name="callT1">אירועי כונן</string>
    <string name="callT2">אירועי קבוצה</string>
    <string name="callT3">אירועי משמרת</string>
    <string name="callT4">הודעות מנהלתיות</string>
    <string name="callTS">הודעות שירות</string>
    <string name="card_content_descriptor">card</string>
    <string name="changeName">לחץ כאן לשינוי שם התצוגה שלך</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chatNameNum">רשמת רק מספרים!</string>
    <string name="code">קוד רפואי</string>
    <string name="codeBad">קוד הפעלה\nשגוי או לא קיים. נסה שנית!</string>
    <string name="codeGood">קוד הפעלה נקלט בהצלחה!\nהאפליקציה תופעל כעת!</string>
    <string name="codeNotAllowed">קוד לא אושר לשימוש!\nייתכן ואירעה תקלה. נסה להזין קוד ידנית: %s</string>
    <string name="codeNotExist">נראה כי מעולם לא שלחת לנו בקשת קוד.\nבמידה ושלחת כבר פעם, אנא נסה לשלוח בקשת קוד שוב, ופרט על התקלה.</string>
    <string name="codeNote">כתוב את פרטיך והוסף בהערות את פרטי ההתנדבות שלך (מרחב ותפקיד) ואנו נבחן את הפרטים ונשלח קוד הפעלה בהקדם.</string>
    <string name="codeUsed">הקוד כבר נוצל בעבר.\nלא ניתן להשתמש בקוד יותר מפעם אחת!\nייתכן והייתה תקלה. נסו להזין ידנית את הקוד: %s</string>
    <string name="res_0x7f11007d_com_crashlytics_android_build_id">5c86563a-8ae3-42a0-a921-c735ae77189e</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="explain">בכדי להוסיף איש צוות לחצו על כפתור ה+ בצד ימין בתחתית המסך.\nבכדי לשלוח את ההודעה למוקד לחצו על הכפתור בצד שמאל.</string>
    <string name="general_settings">הגדרות כלליות</string>
    <string name="notM">מתנדב פעיל ונתקל בחלונית זו?\nצור עימנו קשר ונסייע לך.</string>
    <string name="notMada">נראה לנו שאתה לא מתנדב מדא.\nבכדי שהאפליקציה תפעל כראוי צריכה להיות מותקנת אצלך אפליקציית צוותי מגן דוד אדום.\nבאם האפליקציה מותקנת אצלך ובכל זאת אתה רואה מסך זה, התנתק מאפליקציית הצוותים והתחבר שנית.\nשימוש מהנה ומועיל!</string>
    <string name="pref_description_Maenable_on">זיהוי מקרים באפליקצייה פועל</string>
    <string name="pref_header_advanced">הגדרות מתקדמות</string>
    <string name="pref_header_ampm">הגדרות יום ולילה</string>
    <string name="pref_header_language">הגדרות שפה</string>
    <string name="pref_header_notifications">הגדרות התראות</string>
    <string name="pref_header_sound_and_vib">הגדרות צליל ורטט</string>
    <string name="pref_header_tools">הגדרות כלי עזר</string>
    <string name="pref_title_region">בחירת מרחב ברירת מחדל</string>
    <string name="protocolesAls">פרוטוקולי ALS</string>
    <string name="protocolesBls">פרוטוקולי BLS</string>
    <string name="protocolesDeath">קונטרס \"גישה לנפטר\"</string>
    <string name="succ">שלח</string>
    <string name="title_activity_code">בקשת קוד הפעלה</string>
    <string name="title_code">הכנסת קוד הפעלה</string>
    <string name="title_mda">הורדת יישומון מד\"א</string>
    <string name="toMoked">כתוב הודעתך למוקד.</string>
</resources>