<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_back"
            android:id="@+id/homeDrawer"
            android:title="@string/back"/>
        <item
            android:icon="@drawable/ic_contractions"
            android:id="@+id/contractionCalc"
            android:title="@string/button_f"/>
        <item
            android:icon="@drawable/ic_pulse"
            android:id="@+id/pulseCalc"
            android:title="@string/button_c"/>
        <item
            android:icon="@drawable/ic_metronome"
            android:id="@+id/metronome"
            android:title="@string/button_d"/>
        <item
            android:icon="@drawable/ic_vital"
            android:id="@+id/vitalCalc"
            android:title="@string/button_e"/>
        <item
            android:icon="@drawable/ic_oxygen"
            android:id="@+id/oxygenCalc"
            android:title="@string/button_g"/>
        <item
            android:icon="@drawable/ic_apgar"
            android:id="@+id/apgarCalc"
            android:title="@string/button_ag"/>
        <item
            android:icon="@drawable/ic_glazgo"
            android:id="@+id/glazgowCalc"
            android:title="@string/button_gl"/>
        <item
            android:icon="@drawable/ic_dictionary"
            android:id="@+id/dictionary"
            android:title="@string/button_dict"/>
        <item
            android:id="@+id/protocoles"
            android:orderInCategory="0"
            android:title="@string/button_p">
            <menu>
                <group
                    android:menuCategory="secondary"
                    android:checkableBehavior="single">
                    <item
                        android:icon="@drawable/ic_bls"
                        android:id="@+id/bls"
                        android:orderInCategory="2"
                        android:title="@string/protocolesBls"/>
                    <item
                        android:icon="@drawable/ic_als"
                        android:id="@+id/als"
                        android:orderInCategory="2"
                        android:title="@string/protocolesAls"/>
                    <item
                        android:icon="@drawable/ic_dead"
                        android:id="@+id/death"
                        android:orderInCategory="2"
                        android:title="@string/protocolesDeath"/>
                </group>
            </menu>
        </item>
    </group>
</menu>
