<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_back"
            android:id="@+id/homeDrawer"
            android:title="@string/back"/>
        <item
            android:icon="@drawable/ic_notifications"
            android:id="@+id/notification"
            android:title="@string/pref_header_notifications"/>
        <item
            android:icon="@drawable/ic_audio"
            android:id="@+id/soundAndVib"
            android:title="@string/pref_header_sound_and_vib"/>
        <item
            android:icon="@drawable/ic_advanced"
            android:id="@+id/advanced"
            android:title="@string/pref_header_advanced"/>
        <item
            android:icon="@drawable/ic_clock"
            android:id="@+id/ampm"
            android:title="@string/pref_header_ampm"/>
        <item
            android:icon="@drawable/ic_edit"
            android:id="@+id/tools"
            android:title="@string/pref_header_tools"/>
        <item android:title="@string/general_settings">
            <menu>
                <item
                    android:icon="@drawable/ic_detect_off"
                    android:id="@+id/detect"
                    android:title="@string/pref_description_Maenable_on"/>
                <item
                    android:icon="@drawable/ic_translate"
                    android:id="@+id/language"
                    android:title="@string/pref_header_language"/>
                <item
                    android:icon="@drawable/ic_mda"
                    android:id="@+id/mokedPick"
                    android:title="@string/pref_title_region"/>
            </menu>
        </item>
    </group>
</menu>
