<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/ColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:id="@+id/homeRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ImageView
            android:background="@drawable/curve_toolbar_bg"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/adView"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:background="@color/ColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/banner_ad_unit_id"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
