<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main3"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/freeMsg"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/free_send_card_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">
        <atlow.chemi.mymada.helpers.FixedTextInputEditText
            android:gravity="top"
            android:id="@+id/yourMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toMoked"
            android:lines="6"
            android:singleLine="true"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:id="@+id/free_send_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:cardBackgroundColor="@color/ColorNice"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">
        <Button
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="center"
            android:id="@+id/yourMsgBtnNew"
            android:background="@drawable/btns_new"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/succ"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
