<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ImageView
            android:background="@drawable/curve_toolbar_bg"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"/>
        <ScrollView
            android:background="@drawable/text_white_cornered"
            android:paddingBottom="13dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="25dp"
            android:layout_above="@+id/real_app_card_view">
            <RelativeLayout
                android:paddingBottom="13dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="21sp"
                    android:textColor="@color/ColorRedDark"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notMada"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/Black"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/textView150"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/notM"
                    android:layout_below="@+id/textView11"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </ScrollView>
        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:id="@+id/real_app_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_above="@+id/lin"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:cardBackgroundColor="@color/ColorNice"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">
            <Button
                android:textSize="20sp"
                android:textColor="#fff"
                android:gravity="center"
                android:id="@+id/b9"
                android:background="@drawable/btns_new"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/title_mda"
                android:layout_centerHorizontal="true"
                android:onClick="TZ_app"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/lin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">
            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:id="@+id/code_put_card_view"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/ColorNice"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">
                <Button
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:id="@+id/b6"
                    android:background="@drawable/btns_new"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/title_code"
                    android:layout_weight="1"
                    android:onClick="cod"
                    android:layout_marginEnd="4dp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:id="@+id/code_req_card_view"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/ColorNice"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">
                <Button
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:id="@+id/b4"
                    android:background="@drawable/btns_new"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/title_activity_code"
                    android:onClick="cond"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
