<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/M2ambulance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <atlow.chemi.mymada.helpers.FixedTextInputEditText
                android:gravity="start"
                android:id="@+id/M2txt1E"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ambN"
                android:singleLine="true"
                android:maxLength="4"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/DarkGrey"
            android:id="@+id/explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explain"
            android:layout_below="@+id/M2ambulance"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/LinBtns"
            android:layout_below="@+id/explain"/>
        <LinearLayout
            android:id="@+id/LinBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layoutDirection="rtl">
            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:id="@+id/new_mem_card_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.6"
                android:layout_marginStart="4dp"
                app:cardBackgroundColor="@color/White"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">
                <Button
                    android:textSize="16sp"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:id="@+id/newManNew"
                    android:background="@drawable/btns_new"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/Nteam"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:id="@+id/team_send_card_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.4"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@color/ColorNice"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">
                <Button
                    android:textSize="16sp"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:id="@+id/M2btn1ENew"
                    android:background="@drawable/btns_new"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/succ"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
